draft-packages/avatar/KaizenDraft/Avatar/styles.module.scss
@import "~@kaizen/design-tokens/sass/color";
@import "~@kaizen/design-tokens/sass/shadow";
@import "~@kaizen/design-tokens/sass/typography";

.wrapper {
  background: $kz-color-stone;
  border-radius: 100%;
  overflow: hidden;
  align-items: center;
  display: flex;
  justify-content: center;

  &:not(.small) {
    box-shadow: $kz-shadow-small-box-shadow;
    border: 3px solid $kz-color-white;
  }
  // Themes

  &.personal {
    background: $kz-color-peach-200;
  }

  &.otherUser {
    background: $kz-color-wisteria-200;
  }

  // Sizes

  &.small {
    width: 1.25rem;
    height: 1.25rem;
  }

  &.medium {
    width: 3rem;
    height: 3rem;
  }

  &.large {
    width: 3.75rem;
    height: 3.75rem;
  }
}

.avatarImage {
  .loading & {
    display: none;
  }
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.fallbackIcon {
  color: rgba($kz-color-wisteria-800, 0.3);
  width: 28px;
  .medium & {
    width: 20px;
  }
  .small & {
    width: 8px;
  }
}

.initials {
  box-sizing: border-box;
  color: $kz-color-wisteria-800;
  padding-left: 5px;
  padding-right: 5px;
  text-align: center;
  width: 100%;

  font-size: 22px;
  font-family: $kz-typography-heading-1-font-family;
  font-weight: $kz-typography-heading-1-font-weight;
  letter-spacing: $kz-typography-heading-3-letter-spacing;

  // Whitespace cropping
  &::before {
    content: "";
    display: block;
    margin-top: -0.001em;
  }

  .medium & {
    font-size: 16px;
    font-weight: $kz-typography-heading-5-font-weight;
    letter-spacing: $kz-typography-heading-5-letter-spacing;
  }

  .small & {
    font-size: 8px;
    font-weight: $kz-typography-heading-5-font-weight;
    letter-spacing: $kz-typography-heading-5-letter-spacing;
  }
}

